--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,21 +41,25 @@ textarea{
   color: #000000;
   border-top: 1px dashed #000000;
   border-radius: 0;
+  width: 65px;
 }
 
 .past {
   background-color: #d3d3d3;
   color: white;
+  border: white 1px;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  border: white 1px;
 }
 
 .future {
   background-color: #77dd77;
   color: white;
+  border: white 1px;
 }
 
 .saveBtn {
